# MISO-Proyecto-final

./: .gitignore  CLAUDE.md  Makefile  README.md  mcp.json
.githooks/: pre-commit
docker/: .env.example  docker-compose.yml  (+1 more)
services/auth/: Dockerfile  README.md  main.py  pyproject.toml
services/auth/tests/: test_main.py
services/booking/: .env.example  README.md  docker-compose.yml  main.py  pyproject.toml
services/booking/src/booking/: bootstrap.py  config.py  controllers.py  database.py  main.py  schemas.py
services/booking/src/booking/application/: admin_approve_booking.py  admin_confirm_booking.py  admin_reject_booking.py  cancel_booking.py  change_dates.py  commands.py  create_booking.py  delete_booking.py  get_booking.py  ports.py  update_payment_state.py
services/booking/src/booking/domain/: booking.py  exceptions.py  value_objects.py
services/booking/src/booking/infrastructure/: in_memory_booking_repo.py  models.py  sqlalchemy_booking_repo.py
services/booking/tests/: conftest.py
services/booking/tests/application/: test_use_cases.py
services/booking/tests/domain/: test_booking.py
services/booking/tests/integration/: test_controllers.py
services/booking_orchestrator/: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
services/booking_orchestrator/src/booking_orchestrator/: bootstrap.py  config.py  controllers.py  main.py  schemas.py
services/booking_orchestrator/src/booking_orchestrator/application/: admin_approve_reservation.py  admin_confirm_reservation.py  admin_reject_reservation.py  cancel_reservation.py  change_dates_reservation.py  commands.py  create_reservation.py  get_cancellation_policy.py  make_payment.py  ports.py
services/booking_orchestrator/src/booking_orchestrator/domain/: cancellation_policy.py  events.py  exceptions.py
services/booking_orchestrator/src/booking_orchestrator/infrastructure/: httpx_booking_client.py  httpx_property_client.py  httpx_stripe_client.py  sqs_billing_publisher.py  sqs_notification_publisher.py
services/booking_orchestrator/tests/: conftest.py
services/booking_orchestrator/tests/application/: fakes.py  test_admin_approve_reservation.py  test_admin_confirm_reservation.py  test_admin_reject_reservation.py  test_cancel_reservation.py  test_cancel_reservation_enhanced.py  test_change_dates_reservation.py  test_create_reservation.py  test_get_cancellation_policy.py  test_make_payment.py
services/booking_orchestrator/tests/domain/: test_cancellation_policy.py  test_events.py
services/booking_orchestrator/tests/integration/: test_adapters.py  test_adapters_enhanced.py  test_controllers.py
services/notifications/: README.md  docker-compose.yml  main.py  pyproject.toml
services/notifications/src/notifications/: bootstrap.py  config.py  main.py
services/notifications/src/notifications/application/: handle_booking_approved.py  handle_booking_cancelled.py  handle_booking_confirmed.py  handle_booking_created.py  handle_booking_dates_changed.py  handle_booking_rejected.py  handle_payment_confirmed.py  ports.py
services/notifications/src/notifications/domain/: events.py  exceptions.py
services/notifications/src/notifications/infrastructure/: dispatcher.py  fcm_push_sender.py  smtp_email_sender.py  sqs_consumer.py  ssm_token_registry.py
services/notifications/tests/: conftest.py  test_bootstrap.py
services/notifications/tests/application/: test_handle_booking_approved.py  test_handle_booking_cancelled.py  test_handle_booking_confirmed.py  test_handle_booking_created.py  test_handle_booking_dates_changed.py  test_handle_booking_rejected.py  test_handle_payment_confirmed.py
services/notifications/tests/domain/: test_events.py
services/notifications/tests/infrastructure/: test_dispatcher.py  test_fcm_push_sender.py  test_smtp_email_sender.py  test_sqs_consumer.py  test_ssm_token_registry.py
services/notifications/tests/integration/: test_health.py
services/pms/: Dockerfile  docker-compose.yml  main.py  pyproject.toml
services/pms/tests/: test_main.py
(+655 files in other folders)
