[project]
name = "pms"
version = "0.1.0"
description = "PMS microservice to emulate a delay and proxy property locking requests"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.133.1",
    "uvicorn>=0.41.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]
